--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,64 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap");
-
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: "Inter",sans-serif;
+    font-family: "Inter", sans-serif;
     color: var(--color_heading);
 
 }
-:root{
-    --main_color:rgb(7, 156, 249);
-    --p_color:#7b7b7b;
-    --bg_color:#F3F3F3;
-    --white_color:#fff;
-    --color_heading:#424e5a;
-    --border_color:#e5e5e5d5;
-    --sale_color:rgb(5, 147, 5);
+
+:root {
+    --main_color: rgb(7, 156, 249);
+    --p_color: #7b7b7b;
+    --bg_color: #F3F3F3;
+    --white_color: #fff;
+    --color_heading: #424e5a;
+    --border_color: #e5e5e5d5;
+    --sale_color: rgb(5, 147, 5);
 }
+
+body {
+    padding-top: 180px;
+}
+
 span {
     color: var(--main_color);
 }
+
 p {
     color: var(--p_color);
 }
-h1,h2,h3,h4,h5,h6{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: var(--color_heading);
-    font-family: "DM sans",sans-serif;
+    font-family: "DM sans", sans-serif;
 }
-img {width: 100%;
+
+img {
+    width: 100%;
 }
-input,button,select {
+
+input,
+button,
+select {
     outline: none;
     border: none;
 }
+
 .btns {
     display: flex;
     align-items: center;
     gap: 20px;
 }
+
 .btn {
     padding: 10px 18px;
     text-transform: capitalize;
@@ -56,28 +75,33 @@ input,button,select {
 .btn:hover {
     scale: 1.1;
 }
+
 .btn i {
     color: var(--white_color);
 }
+
 .container {
     width: 90%;
     margin: auto;
     max-width: 1350px;
 }
+
 @media (max-width: 135px) {
-    .container{
+    .container {
         width: 90%;
     }
 }
+
 /*==========START STYLE HEADER===========*/
-header{
+header {
     background-color: #fff;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    box-shadow:5px 8px 8px #949ca33b ;
+    box-shadow: 5px 8px 8px #949ca33b;
 }
+
 /*start top header*/
 header .top_header .container {
     display: flex;
@@ -85,6 +109,7 @@ header .top_header .container {
     justify-content: space-between;
     padding: 15px 0px;
 }
+
 header .top_header .logo {
     width: 110px;
 }
@@ -96,26 +121,30 @@ header .top_header .search_box {
     border-radius: 2px;
     background: var(--bg_color);
 }
+
 header .top_header .search_box input {
     height: 55px;
     width: 400px;
     padding: 5px 15px 5px 10px;
     background: var(--bg_color);
 }
-header .top_header .search_box .select_box{
+
+header .top_header .search_box .select_box {
     position: relative;
 }
+
 header .top_header .search_box .select_box::after {
     content: '';
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 0;
-    width:2px;
+    width: 2px;
     height: 60%;
-    background: #b7d5f3;   
+    background: #b7d5f3;
 }
-header .top_header .search_box  select {
+
+header .top_header .search_box select {
     height: 55px;
     width: 190px;
     background: var(--bg_color);
@@ -124,9 +153,11 @@ header .top_header .search_box  select {
     padding-left: 10px;
     margin-right: 10px;
 }
-header .top_header .search_box  select option {
+
+header .top_header .search_box select option {
     font-size: 15px;
 }
+
 header .top_header .search_box button {
     height: 55px;
     width: 60px;
@@ -134,21 +165,26 @@ header .top_header .search_box button {
     font-size: 18px;
     cursor: pointer;
 }
+
 header .top_header .search_box button i {
     color: var(--bg_color);
 }
+
 header .top_header .header_icons {
     display: flex;
     gap: 35px;
 }
+
 header .top_header .header_icons .icon {
     position: relative;
     cursor: pointer;
 }
+
 header .top_header .header_icons .icon i {
     font-size: 25px;
     color: rgb(34, 34, 101);
 }
+
 header .top_header .header_icons .icon .count {
     position: absolute;
     top: -10;
@@ -162,19 +198,22 @@ header .top_header .header_icons .icon .count {
     font-size: 13px;
     border-radius: 100%;
 }
+
 /*end top header*/
 
 /*start bottom header*/
 
 header .bottom_header {
-    border: 1px solid var(--border_color) ;
+    border: 1px solid var(--border_color);
 }
+
 header .bottom_header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
+
 header .bottom_header nav {
     display: flex;
     align-items: center;
@@ -182,11 +221,13 @@ header .bottom_header nav {
     height: 50px;
 
 }
+
 header .bottom_header .category_nav {
     width: 220px;
     height: 100%;
     position: relative;
 }
+
 header .bottom_header .category_nav .category_btn {
     height: 100%;
     width: 100%;
@@ -197,14 +238,17 @@ header .bottom_header .category_nav .category_btn {
     padding: 0px 15px;
     cursor: pointer;
 }
+
 header .bottom_header .category_nav .category_btn p {
     color: var(--white_color);
     font-weight: 600;
     font-size: 15px;
 }
+
 header .bottom_header .category_nav .category_btn i {
     color: var(--white_color);
 }
+
 header .bottom_header .category_nav .category_nav_list {
     position: absolute;
     top: 100%;
@@ -215,34 +259,63 @@ header .bottom_header .category_nav .category_nav_list {
     border-top: 0;
     display: flex;
     flex-direction: column;
-    clip-path: polygon(0 0 ,100% 0, 100% 0 ,0 0);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 100% 0);
 }
-header .bottom_header .category_nav .category_nav_list.active{
-    clip-path: polygon(0 0 ,100% 0, 100% 0 ,0 100%);
+
+header .bottom_header .category_nav .category_nav_list.active {
+    clip-path: inset(0);
 }
+
 header .bottom_header .category_nav .category_nav_list a {
     padding: 14px;
     border-bottom: 1px solid var(--border_color);
     font-size: 14px;
 }
+
 header .bottom_header .nav_links {
     display: flex;
     gap: 32px;
     margin-left: 10px;
     transition: .3s;
 }
+
 header .bottom_header .category_nav .category_nav_list a:last-child {
     border-bottom: 0;
 }
+
 header .bottom_header .category_nav .category_nav_list a:hover {
     background: #d0d0d0;
 }
+
 header .bottom_header .nav_links li a {
     transition: .3s;
 }
+
 header .bottom_header .nav_links li:hover a {
     color: var(--main_color);
 }
+
 header .bottom_header .nav_links li.active a {
     color: var(--main_color);
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
