--- a/css/style.css
+++ b/css/style.css
@@ -299,23 +299,95 @@ header .bottom_header .nav_links li.active a {
     color: var(--main_color);
 }
 
-.swiper {
-    width: 100%;
-    height: 100%;
-}
+/* Start Slides  */
 
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+.slider {
+    position: relative;
+}
+.slider .container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
 }
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
+.slider .banner_2 {
+    width: 23%;
     height: 100%;
     object-fit: cover;
+}
+.slider .banner_2 a {
+    height: 100%;
+    width: 100%;
+}
+.slider .container .slide_swp{
+    width: 75%;
+    overflow: hidden;
+}
+.swiper-wrapper {
+    height: auto !important;
+}
+.slider .container .slide_swp .swiper-pagination span {
+    background: #fff;
+    opacity: 1;
+}
+.slider .container .slide_swp .swiper-pagination {
+    translate: -170px;
+}
+.swiper-pagination-bullet-active {
+    background-color: var(--main_color) !important;
+    width: 34px !important;
+    height: 8px !important;
+    border-radius: 30px;
+}
+
+/* End Slides  */
+
+/* Start banners_4  */
+
+.banners_4 {
+    margin: 40px 0;
+}
+.banners_4 .container {
+    display: flex;
+    justify-content: space-between;
+}
+.banners_4 .container .box {
+    width: 24%;
+    background: url(../img/bg_banner3.jpg);
+    background-size: contain;
+    background-position: center;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding:12px 10px;
+    position: relative;
+}
+.banners_4 .container .box img {
+    width: 100px;
+    transition: 0.3s;
+}
+.banners_4 .container .box:hover img {
+    scale: 1.2;
+}
+.banners_4 .container .box h5 {
+    font-size: 16px;
+}
+.banners_4 .container .box .sale {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 7px 0;
+}
+.banners_4 .container .box .sale span {
+    font-size: 25px;
+    font-weight: bold;
+}
+.banners_4 .container .box h6 {
+    font-size: 14px;
+    font-weight: bold;
+}
+.banners_4 .container .box .link_btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
 }
